--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.20",
+    "apollo-cache-inmemory": "^1.3.9",
+    "apollo-link-retry": "^2.2.5",
+    "apollo-link-ws": "^1.0.9",
+    "apollo-upload-client": "^9.1.0",
+    "apollo-utilities": "^1.0.25",
     "graphql": "^14.0.2",
     "react": "^16.6.1",
     "react-apollo": "^2.2.4",
@@ -12,7 +17,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "scripts": {
     "start": "react-scripts start",
