--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0"
+  }
 }
